# numerical-analysis

./: CMakeLists.txt
solutions of equations in one variable/: accelerated-solvers.cpp  accelerated-solvers.h  equations-solver.cpp  equations-solver.h  main.cpp
